2004-03-26  fabian

	* Removed 'Bookmarks' button from toolbar.
	* Updates of website files.
	
2004-03-25  ujwal
	
	* Re-implemented bold drawing to use NSStrokeAttributeName on 
	  Panther systems and above.

2004-03-24  ujwal

	* Embedding default profiles for keyboard, display, and terminal 
	  in the application package to be loaded if there no profiles 
	  already defined.

2004-03-23  ujwal

	* Fixed bug in saving display and terminal profiles.

2004-03-23  fabian

	* Changed version number to 0.8.0
	
2004-03-22  fabian

	* Fixed a bug in encoding settings.
	* Added cursor text and selection text in config panel.
	* Fixed bugs in char cache. It now follows changes of color setting correctly.
	* Added Save Display/Terminal Profile in Tools menu.
	
2004-03-21  ujwal

	* Added support to hide all tabs.

2004-03-19  ujwal

	* Removed obsolete code.
	* Minor fix with margins.
	* Shift click extends selection.
	* Added support for horizontal and vertical character spacing.

2004-03-18  ujwal

	* Completed required aspects of new bookmark editor. 
	* Removed remapping of delete key function. Handled by 
	  custom key mapping.
	* New bookmark code activated.
	* Added support for selected text and cursor text colors.

2004-03-14  fabian

	* Completed new UI for terminal profile editor.
	
2004-03-13  ujwal
	
	* Completed new UI for display profile editor.

2004-03-11  fabian

	* Fixes of several margin related bugs (bg image, size calculation...)
	
2004-03-10  fabian

	* Fixed bug in scrolling
	
2004-03-10  ujwal

	* Adjusted selection code to accommodate newly added margin.
	* Fixed yet another selection/CR problem.

2004-03-09  fabian

	* Added margins on the side.
	* Fixed "fast-quit-causing-hangup" problem.
	
2004-03-09  ujwal

	* Fixed a copy/save bug triggered by some blank spaces NOT at end of line.

2004-03-08  ujwal

	* Created a new window controller class for the profiles window.

2004-03-07  ujwal
